# HDF5Meta

./: .gitignore  .gitmodules  CMakeLists.txt  Copyright  README.md  autogen.sh  configure.ac  license.txt  maintainer_clean.sh
Doxygen/: Doxyfile.in
app/: HDF5_number_index_test.c  HDF5_string_index_test.c  SC_AD_FORM.txt
apps/: CMakeLists.txt
apps/concurrent_index/: CMakeLists.txt  test_concurrent_index.c
apps/index_ess/: CMakeLists.txt  HDF5_number_index_test.c  HDF5_string_index_test.c  h5_file_attr_scan.c  sdss_dataset.h
apps/metadata_extractor/: CMakeLists.txt  metadata_extractor.c
apps/miqs_demo/: CMakeLists.txt  HDF5_set_2_index.c
apps/mongodb_demo/: CMakeLists.txt  HDF5_set_2_mongo.c
apps/mongodb_demo/h52json/: hdf52json.c  hdf52json.h
cmake/: FindJSON-C.cmake  FindUUID.cmake  build_doxygen.cmake  config.h.cmake  miqs_config.h.cmake
lib/: CMakeLists.txt  Makefile.am  c11_stdlib.h  c_base_stdlib.c  cmake_install.cmake  fs_ops.c  fs_ops.h  hdf52index.c  hdf52index.h  hdf52json.c  hdf52json.h  hdf5_meta.c  hdf5_meta.h  hdf5_schema_reader.c  hdf5_set_meta.h  new_hdf5_meta.c  new_hdf5_meta.h  query_utils.c  query_utils.h  string_utils.c  string_utils.h  timer_utils.c  timer_utils.h
lib/dao/: bin_file_ops.c  bin_file_ops.h
lib/ds/: art.c  art.h  bplustree.c  bplustree.h  libc_macros.h  tsearch_tune.c
lib/fs/: fs_ops.c  fs_ops.h
lib/h52index/: hdf52index.h
lib/hdf5/: hdf52index.c  hdf52index.h  hdf52json.c  hdf52json.h  new_hdf5_meta.c  new_hdf5_meta.h
lib/include/: base_stdlib.h  c11_stdlib.h  c95_stdlib.h  c99_stdlib.h
lib/index/: hdf52index.c  hdf52index.h  in_mem_index.c  in_mem_index.h  on_disk_index.c  on_disk_index.h
lib/index_spi/: art_string_index.c  art_string_index.h  hash_table_string_index.h  hast_table_string_index.c  rbtree_number_index.c  rbtree_number_index.h  rbtree_string_index.c  rbtree_string_index.h  skiplist_number_index.c  skiplist_number_index.h  sparse_array_number_index.c  sparse_array_number_index.h  spi.c  spi.h  trie_string_index.c  trie_string_index.h  tsearch_number_index.c  tsearch_number_index.h
lib/libhl/: comparators.h  hashtable.c  hashtable.h  linklist.h  rbtree.c  rbtree.h  skiplist.c  skiplist.h  sparse_array.c  sparse_array.h  trie.c  trie.h
lib/metadata/: miqs_meta_collector.c
lib/metadata/extractor/: hdf5_meta_extractor.h
lib/profile/: mem_perf.c  mem_perf.h
lib/rpc/: server_rpc_engine.c  server_rpc_engine.h
lib/utils/: cmd_utils.c  cmd_utils.h  query_utils.c  string_utils.c  string_utils.h  timer_utils.h
scripts/: getfloat.sh  getint.sh  getstring.sh  number_idx_even.sh  sdss_float_IMAGE_MINMAXRANGE.sh  sdss_float_PLUG_DEC.sh  sdss_float_PLUG_RA.sh  sdss_float_SKYCHI2.sh  sdss_int_COLUMN_ID.sh  sdss_int_FIBERID.sh  sdss_int_IMAGE_MAXMINRANGE.sh  sdss_int_MJD.sh  sdss_string_CHECKSUM.sh  sdss_string_DATASUM_COMMENT.sh  sdss_string_SBJFILE.sh  sdss_string_SDSSNAME.sh  sdss_string_SPEC_ID.sh  sim_mongo.sh  string_idx_uuid.sh  test_index_mpi_40.sh  test_index_mpi_60.sh  test_mongo.sh  test_mongo_mpi_100.sh  test_mongo_mpi_20.sh  test_mongo_mpi_60.sh  test_mongo_mpi_80.sh
src/: CMakeLists.txt  HDF5_meta_index_test.c  HDF5_number_index_test.c  HDF5_reader.c  HDF5_set_2_index.c  HDF5_set_2_mongo.c  HDF5_string_index_test.c  Makefile.am  boss_dataset.h  hello_mongoc.c  main.c  miqs_indexing.c  miqs_indexing.h  miqs_querying.c  miqs_querying.h  test_bpt_hdf5.c  test_dir_scan.c  test_unindexed_hdf5.c  testmongo.c
src/app/: CMakeLists.txt  HDF5_set_2_index.c  HDF5_string_index_test.c  main.c  test_bpt_hdf5.c  test_concurrent_index.c  test_mongoc.c
src/bench/index_ess/: HDF5_number_index_test.c  HDF5_string_index_test.c
src/dira/: printa.c
src/dirb/: printb.c  printb.h
src/ds/: art.c  art.h  tsearch_tune.c
src/h52index/: hdf52index.c  hdf52index.h
src/h52json/: hdf52json.c
src/include/: c95_stdlib.h
src/index/: in_mem_index.c  in_mem_index.h  on_disk_index.h
src/index/art/: art.h
src/index/libhl/: atomic_defs.h  avltree.h  graph.h  hashtable.c  hashtable.h  linklist.c  linklist.h  rbtree.c  rbtree.h  skiplist.h  sparse_array.h  trie.c  trie.h
src/index/spi/: art_string_index.c  art_string_index.h  hash_table_string_index.h  rbtree_string_index.h  skiplist_number_index.h  spi.c  spi.h  trie_string_index.h  tsearch_number_index.c  tsearch_number_index.h
src/index_spi/: art_string_index.c  hast_table_string_index.c  rbtree_string_index.c  rbtree_string_index.h  spi.h  tsearch_number_index.h
src/lib/: CMakeLists.txt
src/lib/ds/btree/: tree.h
src/lib/h52index/: hdf52index.c  hdf52index.h
src/lib/h52json/: hdf52json.h
src/lib/include/: base_stdlib.h
src/lib/index/: in_mem_index.c  in_mem_index.h  on_disk_index.c  on_disk_index.h
src/lib/index_spi/: sparse_array_number_index.h
src/lib/libhl/: atomic_defs.h  graph.c  rbtree.h  type_casters.h
src/lib/metadata/: miqs_metadata.c  miqs_metadata.h
src/lib/metadata/extractor/: hdf5_meta_extractor.c  hdf5_meta_extractor.h
src/lib/profile/: mem_perf.c  mem_perf.h
src/lib/rust_mongo_bench/: Cargo.toml
src/lib/rust_mongo_bench/src/: lib.rs
src/lib/thread/: thpool.h
src/lib/utils/: hash_utils.c  string_utils.c  string_utils.h  timer_utils.c
src/libhl/: comparators.h  hashtable.c  linklist.c  trie.h
src/metadata/: hdf5_meta_extractor.c  hdf5_meta_extractor.h  miqs_meta_collector.c  miqs_meta_collector.h  miqs_metadata.h
src/tests/index_ess/: HDF5_string_index_test.c  boss_dataset.h
src/utils/: cmd_utils.c  hash_utils.c  hash_utils.h  query_utils.h  string_utils.c  string_utils.h
src/utils/cbase/: base_stdlib.h  c99_stdlib.h
src/utils/fs/: fs_ops.h
src/utils/profile/: mem_perf.h
src/utils/thread/: thpool.c
tests/: sdss_specid.txt
trace/: Test_data_operation.ipynb  insert_1k_with_0_index.txt  insert_1k_with_1_index.txt  insert_1k_with_2_index.txt  insert_1k_with_3_index.txt  insert_1k_with_4_index.txt  insert_1k_with_5_index.txt  plot_operation_time.ipynb  portable_index_create.txt  query_external_count_1m_num_indexed_matched.txt  query_external_count_1m_num_indexed_unmatched.txt  (+12 more)
