lib_LTLIBRARIES = libstring.la libquery.la libtimer.la
libstring_la_SOURCES = string_utils.c string_utils.h
libquery_la_SOURCES = query_utils.c query_utils.h string_utils.h
libquery_la_LIBADD = ./libstring.la
libtimer_la_SOURCES = timer_utils.c timer_utils.h
libthpool_la_SOURCES = thpool.c thpool.h
libindexds_la_SOURCE = art.c art.h hashset.c hashset.h vector.c vector.h
libh5meta_la_SOURCE = hdf5_meta.c hdf5_meta.h